--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/http": "^6.8.0",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.1.1",
+    "@capacitor/core": "^6.1.1",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "^6.1.1",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
+    "@cometh/connect-sdk": "^1.2.27",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "cordova-plugin-advanced-http": "^3.3.1",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +32,7 @@
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.1.1",
+    "@capacitor/cli": "^6.1.1",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
